Fix overflow x sistemato

--- a/css/index.css
+++ b/css/index.css
@@ -45,14 +45,11 @@
     font-size: 15px;
     margin-top: 12px;
 
-    height: 100%;
+    /* height: 100%; */
 }
 
 .divMessage{
     text-align: left;
-}
-
-.divMessage>span{
 }
 
 .message{
